# openfree-mobile

./: .gitignore  LICENSE  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  android17_research.md  build.gradle.kts  implementation_plan.md  keystore.properties.example  release_handoff.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/java/com/openfree/client/: AudioRecorder.kt  DictionaryAppFunctions.kt  (+8 more)
app/src/main/res/color/: key_text_color_frosted.xml  key_text_color_oled.xml
app/src/main/res/drawable/: floating_mic_bg.xml  floating_mic_bg_active.xml  ic_add.xml  ic_clear.xml  ic_globe.xml  ic_keyboard.xml  ic_mic.xml  ic_settings.xml  ic_stop.xml  input_bg.xml  key_bg.xml  key_bg_frosted.xml  key_bg_oled.xml  mic_button_bg.xml  mic_button_bg_active.xml  mic_button_bg_frosted.xml  mic_button_bg_oled.xml  preview_bg.xml
app/src/main/res/layout/: activity_settings.xml  floating_layout.xml  keyboard_view.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: app_metadata.xml  floating_service_config.xml  method.xml
store_listing/: PRIVACY_POLICY.md  README.md  metadata.md
tests/: run_tests.py
tests/mock_harness/: test_f1_ui.py  test_f2_audio.py  test_f3_whisper.py  test_f4_settings.py  test_f5_dictation.py  test_structure.py  test_tier3_cross_feature.py  test_tier4_workloads.py
tests/mock_harness/native_mock/: CMakeLists.txt  jni.h  whisper_mock.cpp
